# django-drf-net

./: .gitignore  README.md  pyproject.toml
pysocnet/: manage.py
pysocnet/pysocnet/: asgi.py  settings.py  urls.py  wsgi.py
pysocnet/src/: routers.py
pysocnet/src/profiles/: models.py  serialisers.py  urls.py  views.py
pysocnet/src/profiles/migrations/: 0001_initial.py  0002_usernet_bio_usernet_birthday_usernet_gender_and_more.py
